// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays the PartTypeEdit component for a new part type with no attributes 1`] = `
<Fragment>
  <td>
    <AddLink
      addFunction={[Function]}
      addObjectName="Type"
    />
  </td>
  <td>
    <PartTypeData
      componentKey="new"
      handlePartTypeValueChange={[Function]}
      partType={
        Object {
          "_detail": true,
          "can_be_omitted": true,
          "can_be_substituted": false,
          "customer_visible": true,
          "dummyKey": "new",
          "name": "part one",
        }
      }
    />
  </td>
</Fragment>
`;

exports[`displays the PartTypeEdit component for an existing part type with attributes 1`] = `
<Fragment>
  <td>
    <Icon
      as="i"
      name="toggle down"
      onClick={[Function]}
    />
  </td>
  <td>
    <PartTypeData
      componentKey="dummy2"
      handlePartTypeValueChange={[Function]}
      partType={
        Object {
          "_detail": true,
          "attributes": Array [
            "attribute1",
            "attribute2",
          ],
          "can_be_omitted": true,
          "can_be_substituted": false,
          "customer_visible": true,
          "dummyKey": "dummy2",
          "name": "part one",
        }
      }
    />
  </td>
</Fragment>
`;

exports[`displays the PartTypeEdit component for an existing part type with attributes hidden 1`] = `
<Fragment>
  <td>
    <Icon
      as="i"
      name="toggle right"
      onClick={[Function]}
    />
  </td>
  <td>
    <PartTypeData
      componentKey="21"
      handlePartTypeValueChange={[Function]}
      partType={
        Object {
          "_detail": false,
          "can_be_omitted": true,
          "can_be_substituted": false,
          "customer_visible": true,
          "id": 21,
          "name": "part one",
        }
      }
    />
  </td>
</Fragment>
`;
